fix: align-items flex-start sur header-left pour éviter l'étirement du badge

--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -50,6 +50,7 @@
   &__header-left {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 0.5rem;
   }
 
